remove solutions sub-headline and fix spacing.

--- a/src/app/landing/solutions/solutions.scss
+++ b/src/app/landing/solutions/solutions.scss
@@ -27,7 +27,7 @@
   line-height: 1.1;
 
   font-size: clamp(38px, 3.6vw, 56px);
-  margin: 0;
+  margin: 0 0 clamp(24px, 3.1vw, 45px) 0;
 }
 
 .solutions-text {
